# paper-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  chunker.py  config.py  embeddings.py  gemini_client.py  main.py  pdf_loader.py  rag.py  schemas.py  vector_store.py
data/eval/: qa_eval.jsonl
data/sample/: README.md
docs/: architecture.md  evaluation.md
scripts/: evaluate.py  run_api.sh  run_ui.sh
tests/: test_chunker.py  test_pdf_loader.py  test_rag_prompt.py
ui/: streamlit_app.py
